# Auto-templated-resume-generator

./: .gitignore  README.md  package-lock.json  pyproject.toml  requirements.txt  webpack.config.js
auto_generator/: __init__.py  config.py  model.py
auto_generator/api/: user_resume.py
auto_generator/js/: main.jsx  tempgenerator.jsx
auto_generator/static/: entry.js
auto_generator/static/css/: style.css
auto_generator/templates/: generate.html  index.html  login.html  signup.html  user_resume.html
auto_generator/views/: __init__.py  accounts.py  index.py  resumes.py
pdf_template/: default_template.py
sql/: data.sql  schema.sql
var/: auto_generator.sqlite3
